--- a/arch/arm/boot/dts/apollo.dtsi
+++ b/arch/arm/boot/dts/apollo.dtsi
@@ -22,6 +22,10 @@
 		status = "ok";
 	};
 
+        qcom,wdt@f9017000 {
+                qcom,bark-time = <12000>;
+        };
+
 	qcom,mdss_dsi_jdi_dualmipi0_video {
 		status = "ok";
 		qcom,cont-splash-enabled;
