--- a/arch/arm/boot/dts/thor.dtsi
+++ b/arch/arm/boot/dts/thor.dtsi
@@ -21,6 +21,10 @@
 		status = "ok";
 	};
 
+        qcom,wdt@f9017000 {
+                qcom,bark-time = <12000>;
+        };
+
 	qcom,mdss_dsi_novatek_1080p_video {
 		qcom,mdss-pan-dsi-dlane-swap = <1>;
 		status = "ok";
