--- a/arch/arm/configs/thor-perf_defconfig
+++ b/arch/arm/configs/thor-perf_defconfig
@@ -67,7 +67,6 @@ CONFIG_MSM_ADSP_LOADER=m
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
 CONFIG_MSM_OCMEM_DEBUG=y
-CONFIG_MSM_OCMEM_NONSECURE=y
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_RTB_SEPARATE_CPUS is not set
 CONFIG_MSM_CACHE_ERP=y
@@ -75,8 +74,8 @@ CONFIG_MSM_L1_ERR_PANIC=y
 CONFIG_MSM_L1_RECOV_ERR_PANIC=y
 CONFIG_MSM_L1_ERR_LOG=y
 CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
-CONFIG_MSM_L2_ERP_PORT_PANIC=y
-CONFIG_MSM_L2_ERP_2BIT_PANIC=y
+#CONFIG_MSM_L2_ERP_PORT_PANIC=y
+#CONFIG_MSM_L2_ERP_2BIT_PANIC=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_CACHE_DUMP_ON_PANIC is not set
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
